# Capstone

./: .gitignore  README.md  link.txt  package-lock.json  package.json
backend/: .env.example  main.py  pyproject.toml  vidquery.db  vidquery_summaries.db
backend/legacy/: link.txt  main_legacy.py
backend/src/: config.py  utils.py  youtube_chatbot.py
backend/src/chain/: __init__.py  agent.py  chatbot_chain.py  qa_chain.py  summary_chain.py
backend/src/database/: models.py
backend/src/vector_stores/: qa_vector_store.py  summary_vector_store.py
backend/tests/: test_api_smoke.py  test_fastapi.py  test_process.py  test_utils.py  test_write.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  featureStorage.ts  index.css  markdown.ts
frontend/src/components/: AuthPage.tsx  ChatPanel.tsx  ConceptMapPanel.tsx  MarkdownText.tsx  PerspectivesPanel.tsx  ProfileModal.tsx  QuizPanel.tsx  SideBar.tsx
