[project]
name = "vidquery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.1",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=0.2.0",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.37",
    "streamlit>=1.55.0",
    "youtube-transcript-api>=1.2.4",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "passlib>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "argon2-cffi>=25.1.0",
]
