[project]
name = "vidquery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain>=0.3.0",
    "langchain-community>=0.4.1",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=4.2.1",
    "langchain-text-splitters>=1.1.1",
    "sqlmodel>=0.0.37",
    "youtube-transcript-api>=1.2.4",
    "fastapi[standard]>=0.115.0",
    "passlib>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "argon2-cffi>=25.1.0",
]
